# ha-agent

./: .gitignore  LICENSE  README.md  hacs.json  repository.yaml
agent/: .dockerignore  .env.local.example  Dockerfile  README.md  config.yaml  pyproject.toml  run.sh
agent/src/ha_agent/: config.py  logging.py  main.py  registry.py  state.py
agent/src/ha_agent/agent/: instruction.py  runtime.py
agent/src/ha_agent/chat/: routes.py  schema.py
agent/src/ha_agent/evals/: __init__.py  assertions.py  corpus.yaml  fakes.py  runner.py
agent/src/ha_agent/ha/: client.py  types.py  ws.py
agent/src/ha_agent/index/: keyword.py  semantic.py
agent/src/ha_agent/memory/: aliases.py
agent/src/ha_agent/observability/: traces.py
agent/src/ha_agent/safety/: audit.py  limiter.py
agent/src/ha_agent/tools/: aliases.py  context.py  entities.py  services.py  ui.py
agent/tests/: conftest.py  test_audit_route.py  test_config.py  test_e2e_smoke.py  test_main.py  test_registry.py  test_traces.py
agent/tests/agent/: test_instruction.py  test_runtime.py
agent/tests/chat/: test_routes.py
agent/tests/ha/: test_client.py  test_ws.py
agent/tests/index/: test_keyword.py  test_semantic.py
agent/tests/safety/: test_audit.py  test_limiter.py
agent/tests/tools/: test_entities.py  test_services.py  test_ui.py
agent/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
agent/ui/src/: App.tsx  index.css  main.tsx
agent/ui/src/components/: ActivityView.tsx  ChatView.test.tsx  ChatView.tsx  Header.tsx  MemoryView.tsx  Message.tsx  SessionDrawer.tsx  (+2 more)
(+27 files in other folders)
